changed from animating the mobile nav with margin left to transform3d. much smoother. also fixed issue on top dropdown nav there the underline did not overlap the border below.

--- a/app/assets/stylesheets/partials/_furniture.css.scss
+++ b/app/assets/stylesheets/partials/_furniture.css.scss
@@ -30,15 +30,19 @@
 	&.nav-active {
 		nav {
 			float: left;
-			width: 75%;
-			margin-left: 25%;
+			// width: 75%;
+			// margin-left: 25%;
+			@include translate3d (25%);
+			
 		}
 		
 		.content {
 			border-right: 1px solid $lightneutralcolor;
 			float: left;
-			margin-left: -75%;
-			width: 100%;
+			// margin-left: -75%;
+			// width: 100%;
+			@include translate3d (-75%);
+			
 		}
 		
 		.menu {
@@ -48,9 +52,11 @@
 		@include media-query-bp($bp3) {
 			nav {
 				float: none;
-				width: 100%;
+				// width: 100%;
 				// height: auto;
-				height: 56px;
+				@include translate3d (0%);
+				// height: 56px;
+				height: 58px;
 				margin-left: 0;
 				border-bottom: 1px solid $lightneutralcolor;
 				
@@ -58,8 +64,9 @@
 
 			.content {
 				// float: left;
-				margin-left: 0;
+				// margin-left: 0;
 				// width: 100%;
+				@include translate3d (0%);
 				border-right: none; 	
 			}
 		}
@@ -75,6 +82,8 @@ header {
 	@include navbargrad;
 	min-height: 55px;
 	color: $white;
+	
+	z-index: 30;
 	
 	.logo {
 		position: absolute;
@@ -202,19 +211,27 @@ header {
 nav {
 	
 	@include transition(all, .25s);
+	-webkit-backface-visibility: hidden;
+	@include translate3d ();
 	
 	// transition: .2s all ease;			
 	// -webkit-transition: .2s all ease;
 	background-color: $white;
 	
-	float: left;
-	width: 0;
-	margin-left: 100%;
+	// float: left;
+	// width: 0;
+	// margin-left: 100%;
 	overflow-x: hidden;
 	position: absolute;
+	z-index: 20;
+	width: 100%;
+	
+	@include translate3d (100%);
+	
 	
 	.navwrapper {
-		width: $bp6;
+		// width: $bp6;
+		width:100%
 		
 	}
 	
@@ -235,6 +252,7 @@ nav {
 	}
 	
 	a {
+		cursor: pointer;
 		@include transition(all, .2s);
 		// transition: .2s all ease;
 		// -webkit-transition: .2s all ease;
@@ -244,6 +262,7 @@ nav {
 		height: 55px;
 		border-bottom: 1px solid $lightneutralcolor;
 		width: 100%;
+		// width: auto;
 		padding: 16px 0px 0px 16px ;
 		
 		
@@ -277,17 +296,22 @@ nav {
 	
 	
 	@include media-query-bp($bp3) {
-		position: static;
-		overflow-y: hidden;
+		position: relative;
+		overflow-y: visible;
 		overflow-x: visible;
 		width: 100%;
-		height: 0;
+		height: 0px;
 		float: none;
-		margin-left: 0;
+		@include translate3d (0%);
+		
+		// margin-left: 0;
 		
 		.navwrapper {
 			width: auto;
 			max-width: $bp6;
+			position: absolute;
+			bottom: -1px;
+			right: 0px;
 		}
 		
 		ul {
@@ -326,6 +350,8 @@ nav {
 .content {
 	
 	// @include transition($property: all, $duration: $transitionduration, $ms: false)
+	-webkit-backface-visibility: hidden;
+	@include translate3d ();
 	
 	@include transition(all);
 	
@@ -343,6 +369,8 @@ nav {
 	@include outer-container;
 	
 	.leftcol {
+		-webkit-backface-visibility: hidden;
+		@include translate3d ();
 		
 		background-color: $sidebarbg;
 		display : none;
@@ -361,6 +389,8 @@ nav {
 	}
 	
 	.rightcol {
+		-webkit-backface-visibility: hidden;
+		@include translate3d ();
 		
 		background-color: darken($tertiarycolor, 5%);
 		
